 + Option to upload image files for categories (jpg, gif, png ~ auto resizing to selected default dimensions)
 + Maintenance option to purge unused arcade icons from the arc_icons directory (deletes files not currently used by the arcade)
 & New language for all icon related changes
 * Removed arcade_settings table & added arcade_members table (improved format & more settings)


SMF Arcade 2.5 RC4                                                    xx.12.2015
================================================================================
December 2015
 + SMF 2.0.X branch support
 + SMF 2.1.X branch support
 + Added option to select E-Arcade skin
 + Added category maintenance options
 + Arcade list type available for all templates
 + Added option to view/hide information center
 + Default list now uses horizontal button navigation
 + Added additional list display options
 + Added unique unzip & gz sub-routines
 + Option to delete files within the game install list
 + Added HTML5 Upload sub-routine
 ! Removed PDL custom template
 ! File permission issue for some host configuration fixed
 ! Updated license & its hyperlinks
 ! Adjusted css for arcade info center
 ! Fixed arcade & game container upshrink
 ! Opting to view a report from the list now shows its specific game report
 ! Sanitized code including the removal of Heredoc syntax from the Jeza template
 ! Fixed "new" category
 ! Fixed behavior of sorting options
 ! Download sub-routine compresses entire game folder if it exists else default game files within Game directory

SMF Arcade 2.5 RC3                                                    xx.03.2015
================================================================================
March 2015
--------------------------------------------------------------------------------
 + Project taken over by Chen Zhen @ http://web-develop.ca
 + SMF 2.0.10 Support
 + PDL/Skin combo included within installation
 + Games with no type data should now auto configure
